Add second email

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1>I Am More Phase 1B Contest Entries</h1><h2>Previews for 5 email templates:</h2>
             <ol>
                 <li><a href="01-thank-you.html" target="_blank">Thank you</a></li>
-                <li>Grant</li>
+                <li><a href="02-grant.html" target="_blank">Grant</a></li>
                 <li>Demo</li>
                 <li>Stories</li>
                 <li>Promote</li>
@@ -53,7 +53,7 @@
 		</th></tr></table></th>
 		<th class="small-12 large-6 columns last"><table><tr><th>
 			<table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
-			<p class="text-right">&copy;2018 Voyager Sopris Learning.<br> All Rights Reserved.<br> 17855 Dallas Parkway, Dallas, TX 75287<br>
+			<p class="text-right">&copy;2019 Voyager Sopris Learning.<br> All Rights Reserved.<br> 17855 Dallas Parkway, Dallas, TX 75287<br>
 				<a href="http://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2018_Q3_IAmMore_Admin1" target="_blank">www.voyagersopris.com</a> / <a href="tel:18005476747" target="_blank" title="Call Voyager Sopris Learning">800.547.6747</a>
 			</p>
 		</th></tr></table></th>
