--- a/01-thank-you.html
+++ b/01-thank-you.html
@@ -31,13 +31,13 @@
 	<table pardot-repeatable="" class="row collapse"><tbody><tr>
 		<th class="no-bottom-padding small-12 large-12 columns first last" pardot-region="header_image"><table><tr><th>
 			<table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
-			<a href="https://www.voyagersopris.com/sites/i-am-more-home?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More"><img src="https://go.voyagersopris.com/l/207592/2019-02-27/8lvkm/207592/92652/I_Am_More_Phase_1b_2_email_bnr.jpg" height="400" style="font-size: 24px;line-height:30px;background-color:#005587;color:#ffffff;text-align:center;" alt=""></a>
+			<a href="https://www.voyagersopris.com/sites/i-am-more-home/i-am-more-admin?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More"><img src="https://go.voyagersopris.com/l/207592/2019-02-27/8lvkm/207592/92652/I_Am_More_Phase_1b_2_email_bnr.jpg" height="400" style="font-size: 24px;line-height:30px;background-color:#005587;color:#ffffff;text-align:center;" alt=""></a>
 		</th></tr></table></th>
 	</tr></tbody></table>
 	<table pardot-repeatable="" class="row"><tbody><tr>
 		<th class="small-12 large-12 columns first last" pardot-region="body_copy"><table><tr><th>
             <table class="spacer"><tbody><tr><td height="20px" style="font-size:20px;line-height:20px;">&#xA0;</td></tr></tbody></table> 
-            <center data-parsed=""><table class="button radius secondary float-center"><tr><td><table><tr><td><a href="https://www.voyagersopris.com/sites/i-am-more-home?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More">CTA Button</a></td></tr></table></td></tr></table></center>
+            <center data-parsed=""><table class="button radius secondary float-center"><tr><td><table><tr><td><a href="https://www.voyagersopris.com/sites/i-am-more-home/i-am-more-admin?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More">Get I Am More Resources</a></td></tr></table></td></tr></table></center>
 			<p>Dear %%first_name%%,</p>
 			<p>Thank you for participating in the <strong>I Am More<sup>&trade;</sup></strong> contest. We will announce the ISTE 2019 grand prize winner in early May.</p>
             <p>By downloading the staff meeting kit, you are taking the first step in creating a culture of possibility. You are building a foundation from which students and educators can believe in more and achieve more. </p>
@@ -53,7 +53,7 @@
 		</th></tr></table></th>
 		<th class="small-12 large-6 columns last"><table><tr><th>
 			<table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
-			<p class="text-right">&copy;2018 Voyager Sopris Learning.<br> All Rights Reserved.<br> 17855 Dallas Parkway, Dallas, TX 75287<br>
+			<p class="text-right">&copy;2019 Voyager Sopris Learning.<br> All Rights Reserved.<br> 17855 Dallas Parkway, Dallas, TX 75287<br>
 				<a href="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More" target="_blank">www.voyagersopris.com</a> / <a href="tel:18005476747" target="_blank" title="Call Voyager Sopris Learning">800.547.6747</a>
 			</p>
 		</th></tr></table></th>
