--- a/03-demo.html
+++ b/03-demo.html
@@ -6,17 +6,17 @@
 	<link rel="stylesheet" type="text/css" href="css/app.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Improve literacy skills. This grant makes it possible.</title>
+	<title>Learn how literacy can be a launching pad</title>
 	<!-- <style> -->
 </head>
 <body>
-<span class="invisible-previewline">Improve literacy skills. This grant makes it possible.</span>
+<span class="invisible-previewline">I Am More spotlights the potential in everyone</span>
 <table class="body">
 	<tr>
 		<td class="center" align="center" valign="top">
 			<center data-parsed="">
-				 <div class="preview-subject float-center" align="center"><strong>SUBJECT:</strong> Improve literacy skills. This grant makes it possible.<br><strong>HIDDEN
-        TEASER:</strong> Improve literacy skills. This grant makes it possible.</div>
+				 <div class="preview-subject float-center" align="center"><strong>SUBJECT:</strong> Learn how literacy can be a launching pad<br><strong>HIDDEN
+        TEASER:</strong> I Am More spotlights the potential in everyone</div>
 <table class="spacer float-center"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
 <p class="view-online float-center" pardot-region="view-online" align="center">View this message <a href="%%view_online%%" target="_blank">online</a>.</p>
 <table align="center" class="container float-center"><tbody><tr><td>
@@ -37,17 +37,13 @@
     <table pardot-repeatable="" class="row"><tbody><tr>
         <th class="small-12 large-12 columns first last" pardot-region="body_copy"><table><tr><th>
             <table class="spacer"><tbody><tr><td height="20px" style="font-size:20px;line-height:20px;">&#xA0;</td></tr></tbody></table> 
-            <h1>Improve literacy skills.<br>This grant makes it possible.</h1>
+            <h1><strong>I Am More</strong> spotlights the potential in everyone</h1>
             <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
-            <center data-parsed=""><table class="button radius secondary float-center"><tr><td><table><tr><td><a href="https://go.voyagersopris.com/2019-ll-grant?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More">Start Your Application Now</a></td></tr></table></td></tr></table></center>
+            <center data-parsed=""><table class="button radius secondary float-center"><tr><td><table><tr><td><a href="https://www.voyagersopris.com/sites/i-am-more-home?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More#demo">Request a Demo</a></td></tr></table></td></tr></table></center>
             <p>Dear %%first_name%%,</p>
-            <p>How is the <strong>I Am More<sup>&trade;</sup></strong> movement in your school? How is the <strong>I Am More<sup>&trade;</sup></strong> movement in your school? Are your
-                administrators, teachers, students expressing their true selves and showing they are MORE? </p>
-            <p>That is why the <strong>I Am More</strong> movement emphasizes the unique role English language arts skills, specifically
-                literacy, play in all academic areas and in expressing individuality. ELA skills are the launching pad
-                for students to think critically, problem solve, and express themselves in ways that directly impact
-                their world. </p>
-            <p><strong>I Am More</strong> motivates students and builds confidence; <em><strong>LANGUAGE!<sup>&reg;</sup> Live</strong></em> builds their literacy skills to help
+            <p>English language arts skills kickstart a student’s ability to achieve more. <em><strong>LANGUAGE!<sup>&reg;</sup> Live</strong></em> provides the
+                tools for teachers to make a difference and a platform for students to excel. </p>
+            <p><strong>I Am More<sup>&trade;</sup></strong> motivates students and builds confidence; <strong><em>LANGUAGE! Live</em></strong> builds their literacy skills to help
                 them achieve MORE.</p>
 
         </th>
@@ -56,11 +52,12 @@
     <table pardot-repeatable="" class="row wincard"><tbody><tr>
         <th class="small-12 large-12 columns first last" pardot-region="wincard"><table><tr><th>
             <table class="spacer"><tbody><tr><td height="20px" style="font-size:20px;line-height:20px;">&#xA0;</td></tr></tbody></table> 
-            <h3>IMPROVE LITERACY SKILLS IN ADOLESCENTS</h3>
-            <p>Take a stand for literacy in your school. Apply now for the <a href="https://go.voyagersopris.com/2019-ll-grant?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More" target="_blank"><strong><em>LANGUAGE! Live</em> Literacy Acceleration Grant</strong></a>, which
-                makes it possible to effect dramatic changes in literacy achievement without additional budget expense.<br>Deadline
-                is April 30, 2019.</p>
-            <center data-parsed=""><table class="button radius secondary float-center"><tr><td><table><tr><td><a href="https://go.voyagersopris.com/2019-ll-grant?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More">Start Your Application Now</a></td></tr></table></td></tr></table></center>
+            <h3>BELIEVE LITERACY IS POSSIBLE.</h3>
+            <p><em><strong>LANGUAGE!<sup>&reg;</sup> Live</strong></em>, literacy intervention for grades 5–12, inspires a new level of confidence and drive to
+                help students become proficient readers. And studies show, when students read proficiently, it can
+                change their lives; it opens up all possibilities.</p>
+            <center data-parsed=""><table class="button radius secondary float-center"><tr><td><table><tr><td><a href="https://www.voyagersopris.com/sites/i-am-more-home?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More#demo">Request a Demo</a></td></tr></table></td></tr></table></center>
+
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
