--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <ol>
                 <li><a href="01-thank-you.html" target="_blank">Thank you</a></li>
                 <li><a href="02-grant.html" target="_blank">Grant</a></li>
-                <li>Demo</li>
-                <li>Stories</li>
-                <li>Promote</li>
+                <li><a href="03-demo.html" target="_blank">Demo</a></li>
+                <li><a href="04-stories.html" target="_blank">Stories</a></li>
+                <li><a href="05-promote.html" target="_blank">Promote</a></li>
             </ol>
 		</th>
 <th class="expander"></th></tr></table></th>
