--- a/05-promote.html
+++ b/05-promote.html
@@ -6,17 +6,17 @@
 	<link rel="stylesheet" type="text/css" href="css/app.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Improve literacy skills. This grant makes it possible.</title>
+	<title>Bring I Am More to Your School or District</title>
 	<!-- <style> -->
 </head>
 <body>
-<span class="invisible-previewline">Improve literacy skills. This grant makes it possible.</span>
+<span class="invisible-previewline">Staff meeting kit and enter to win a trip to ISTE 2019</span>
 <table class="body">
 	<tr>
 		<td class="center" align="center" valign="top">
 			<center data-parsed="">
-				 <div class="preview-subject float-center" align="center"><strong>SUBJECT:</strong> Improve literacy skills. This grant makes it possible.<br><strong>HIDDEN
-        TEASER:</strong> Improve literacy skills. This grant makes it possible.</div>
+				 <div class="preview-subject float-center" align="center"><strong>SUBJECT:</strong> Bring I Am More to Your School or District<br><strong>HIDDEN
+        TEASER:</strong> Staff meeting kit and enter to win a trip to ISTE 2019</div>
 <table class="spacer float-center"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
 <p class="view-online float-center" pardot-region="view-online" align="center">View this message <a href="%%view_online%%" target="_blank">online</a>.</p>
 <table align="center" class="container float-center"><tbody><tr><td>
@@ -37,40 +37,31 @@
     <table pardot-repeatable="" class="row"><tbody><tr>
         <th class="small-12 large-12 columns first last" pardot-region="body_copy"><table><tr><th>
             <table class="spacer"><tbody><tr><td height="20px" style="font-size:20px;line-height:20px;">&#xA0;</td></tr></tbody></table> 
-            <h1>Improve literacy skills.<br>This grant makes it possible.</h1>
+            <h3>Build a Positive School Culture</h3>
+            <h1>Kick off <strong>I Am More<sup>&trade;</sup></strong> in your school or district and enter to win a
+                paid trip to ISTE 2019. </h1>
+            <h4>Download the staff meeting kit and automatically be entered to win. Deadline is April 30, 2019.</h4>
             <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
-            <center data-parsed=""><table class="button radius secondary float-center"><tr><td><table><tr><td><a href="https://go.voyagersopris.com/2019-ll-grant?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More">Start Your Application Now</a></td></tr></table></td></tr></table></center>
+            <center data-parsed=""><table class="button radius secondary float-center"><tr><td><table><tr><td><a href="https://www.voyagersopris.com/sites/i-am-more-home/i-am-more-contest?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More#2019">Get the Kit and Enter to Win</a></td></tr></table></td></tr></table></center>
+            <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
             <p>Dear %%first_name%%,</p>
-            <p>How is the <strong>I Am More<sup>&trade;</sup></strong> movement in your school? How is the <strong>I Am More<sup>&trade;</sup></strong> movement in your school? Are your
-                administrators, teachers, students expressing their true selves and showing they are MORE? </p>
-            <p>That is why the <strong>I Am More</strong> movement emphasizes the unique role English language arts skills, specifically
-                literacy, play in all academic areas and in expressing individuality. ELA skills are the launching pad
-                for students to think critically, problem solve, and express themselves in ways that directly impact
-                their world. </p>
-            <p><strong>I Am More</strong> motivates students and builds confidence; <em><strong>LANGUAGE!<sup>&reg;</sup> Live</strong></em> builds their literacy skills to help
-                them achieve MORE.</p>
+            <p>The <a href="https://www.voyagersopris.com/sites/i-am-more-home?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More" target="_blank" rel="noopener noreferrer"><strong>I Am More<sup>&trade;</sup></strong> movement</a>
+                unlocks potential by giving students and educators a voice; a chance to express individuality and
+                embrace possibility. It builds student motivation and creates a foundation from which students and
+                educators can achieve more. </p>
 
-        </th>
-<th class="expander"></th></tr></table></th>
-    </tr></tbody></table>
-    <table pardot-repeatable="" class="row wincard"><tbody><tr>
-        <th class="small-12 large-12 columns first last" pardot-region="wincard"><table><tr><th>
-            <table class="spacer"><tbody><tr><td height="20px" style="font-size:20px;line-height:20px;">&#xA0;</td></tr></tbody></table> 
-            <h3>IMPROVE LITERACY SKILLS IN ADOLESCENTS</h3>
-            <p>Take a stand for literacy in your school. Apply now for the <a href="https://go.voyagersopris.com/2019-ll-grant?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More" target="_blank"><strong><em>LANGUAGE! Live</em> Literacy Acceleration Grant</strong></a>, which
-                makes it possible to effect dramatic changes in literacy achievement without additional budget expense.<br>Deadline
-                is April 30, 2019.</p>
-            <center data-parsed=""><table class="button radius secondary float-center"><tr><td><table><tr><td><a href="https://go.voyagersopris.com/2019-ll-grant?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More">Start Your Application Now</a></td></tr></table></td></tr></table></center>
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
     <table pardot-repeatable="" class="row"><tbody><tr>
-        <th class="no-bottom-padding small-12 large-12 columns first last"><table><tr><th>
-            <table class="spacer"><tbody><tr><td height="15px" style="font-size:15px;line-height:15px;">&#xA0;</td></tr></tbody></table> 
-        </th>
-<th class="expander"></th></tr></table></th>
+        <th class="small-12 large-6 columns first" pardot-region="body_copy"><table><tr><th>
+            <a href="https://www.voyagersopris.com/sites/i-am-more-home/i-am-more-admin?utm_source=news&utm_medium=email&utm_campaign=2019_Q1_I_Am_More#lopez-video" target="_blank"><img src="https://go.voyagersopris.com/l/207592/2019-03-06/8q8zh/207592/93666/lopez_video.jpg" alt="Lopez video" width="275" height="155"></a>
+        </th></tr></table></th>
+        <th class="small-12 large-6 columns last" pardot-region="body_copy"><table><tr><th>
+            <p><strong>See how area superintendent of Denton ISD brought the <strong>I Am More</strong> movement to schools across his district.</strong></p>
+            <table class="button radius secondary small"><tr><td><table><tr><td><a href="https://www.voyagersopris.com/sites/i-am-more-home/i-am-more-admin?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More#lopez-video">Watch Video</a></td></tr></table></td></tr></table>
+        </th></tr></table></th>
     </tr></tbody></table>
-
     <table class="row footer"><tbody><tr>
         <th class="small-12 large-6 columns first"><table><tr><th>
             <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
