Add versions with logos

--- a/03-demo.html
+++ b/03-demo.html
@@ -64,6 +64,10 @@
     <table pardot-repeatable="" class="row"><tbody><tr>
         <th class="no-bottom-padding small-12 large-12 columns first last"><table><tr><th>
             <table class="spacer"><tbody><tr><td height="15px" style="font-size:15px;line-height:15px;">&#xA0;</td></tr></tbody></table> 
+            <a href="https://www.voyagersopris.com/literacy/language-live/overview?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More"><center data-parsed="">
+                <img src="https://go.voyagersopris.com/l/207592/2019-01-22/89t5v/207592/87305/lang_live_white_bg.png" alt="Language! Live" width="250" height="55" align="center" class="float-center">
+            </center></a>
+            <table class="spacer"><tbody><tr><td height="15px" style="font-size:15px;line-height:15px;">&#xA0;</td></tr></tbody></table> 
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
