--- a/04-stories.html
+++ b/04-stories.html
@@ -69,9 +69,17 @@
     </tr></tbody></table>
     <table class="row"><tbody><tr>
         <th class="small-12 large-12 columns first last" pardot-region="body_copy"><table><tr><th>
-            <p>Remember, if you <a href="https://www.voyagersopris.com/sites/i-am-more-home?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More#demo" target="_blank">register for a demo</a>, you can be entered to win a grant for <em><strong>LANGUAGE! Live</strong></em> in
+            <p>Remember, if you <a href="https://www.voyagersopris.com/sites/i-am-more-home?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More#demo" target="_blank">register for a demo</a>, you can be entered to win a grant for <em><strong>LANGUAGE!
+                        Live</strong></em> in
                 your school.</p>
-                <h3>Literacy is the foundation on which districts improve.</h3>
+            <h3>Literacy is the foundation on which districts improve.</h3>
+            <table class="spacer"><tbody><tr><td height="15px" style="font-size:15px;line-height:15px;">&#xA0;</td></tr></tbody></table> 
+            <a href="https://www.voyagersopris.com/literacy/language-live/overview?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_I_Am_More">
+                <center data-parsed="">
+                    <img src="https://go.voyagersopris.com/l/207592/2019-01-22/89t5v/207592/87305/lang_live_white_bg.png" alt="Language! Live" width="250" height="55" align="center" class="float-center">
+                </center>
+            </a>
+            <table class="spacer"><tbody><tr><td height="15px" style="font-size:15px;line-height:15px;">&#xA0;</td></tr></tbody></table> 
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
